--- a/index.html
+++ b/index.html
@@ -1,48 +1,62 @@
 <!doctype html>
 <html lang="en-us">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About | Joe Christopher</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-
 <body>
+
+<div class="wrapper">
 
   <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Joe Christopher</a>
       <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <ul>
+          <li><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
-  <div id="main-container" class="container">
+  <main class="container">
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/stache.jpg" class="auth-image" alt="Mustache Guy">
-            <p>Welcome to my first web page!  You're probably asking yourself, "Who is that handsome MF in that photo?".  Calm down, I didn't make this page
-              so you can creep on my pics all day.  I created it for the following reasons....
-            </p>
-            <p>#1 - I needed something to test media queries on, this serves its purpose.</p>
-            <p>#2 - To prove that a mustache, tie, and fishing vest is one
-              hell of a sweet look! </p>
-              <p>I'm getting lazy..time for some Lorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus at perspiciatis quos deleniti expedita qui nesciunt dolorem, eius, quas deserunt similique, nihil consectetur ut ad repudiandae. Voluptatum natus magnam veritatis?</p>
+      <img src="assets/images/stache.jpg" class="auth-image" alt="mustache">
+
+      <p>Welcome to my first web page!  You're probably asking yourself, "Who is that handsome MF in that photo?".  Calm down, I didn't make this page
+        so you can creep on my pics all day.  I created it for the following reasons....
+      </p>
+      <p>#1 - I needed something to test media queries on, this serves its purpose.</p>
+      <p>#2 - To prove that a mustache, tie, and fishing vest is one
+        <b>HELL</strong> of a sweet look! </p>
+        <p>I'm getting lazy..time for some Lorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus at perspiciatis quos deleniti expedita qui nesciunt dolorem, eius, quas deserunt similique, nihil consectetur ut ad repudiandae. Voluptatum natus magnam veritatis?</p>
     </section>
 
-  </div>
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <ul>
+          <li><a href="#"><img src="assets/images/github.png" alt="Github"></a></li>
+          <li><a href="#"><img src="assets/images/linkedin.png" alt="LinkedIn"></a></li>
+          <li><a href="#"><img src="assets/images/stackoverflow.png" alt="Stack Overflow"></a></li>
+        </ul>   
+      </div>
+    </section>
+  </main>
+  <div class="push"></div>
+</div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      &copy; Copyright 2018 - Joe Christopher
     </div>
   </footer>
 </body>
-
 </html>
